--- a/AppPropina/AppPropina/View/MainPage.xaml
+++ b/AppPropina/AppPropina/View/MainPage.xaml
@@ -1,26 +1,38 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:AppPropina"
-             x:Class="AppPropina.MainPage">
+             xmlns:local="clr-namespace:AppPropina.ViewModel"
+             x:Class="AppPropina.View.MainPage">
 
-    <TableView Intent="Form" HasUnevenRows="True">
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <local:PropinaviewModel x:Key="propVM"></local:PropinaviewModel>
+        </ResourceDictionary>
+    </ContentPage.Resources>
+
+
+    <TableView BindingContext="{Binding Source={StaticResource propVM}}" 
+               Intent="Form" 
+               HasUnevenRows="True">
         <TableSection Title="Datos Generales">
             <EntryCell x:Name="entTotal"
+                       Placeholder="$0.0"
                        Label="Total"
-                       Placeholder="$0.0">
+                       Text="{Binding Total, Model=TwoWay }">
                 
             </EntryCell>
             
             <EntryCell x:Name="entPropina"
                        Label="Propina"
-                       Placeholder="%">
+                       Placeholder="%"
+                       Text="{Binding propinaModel.Total, Model=TwoWay}">
                 
             </EntryCell>
             
             <EntryCell x:Name="entPersonas"
                        Label="Total"
-                       Placeholder="Ingresar personas">
+                       Placeholder="Ingresar personas"
+                       Text="{Binding propinaModel.TotalPersonas, Model=TwoWay}">
                 
             </EntryCell>
         </TableSection>
@@ -29,7 +41,8 @@
                 <ViewCell.View >
                     <StackLayout>
                         <Button x:Name="btnCalcular" 
-                                Text="Calcular">
+                                Text="Calcular"
+                                Command="{Binding CalcularCommand}">
                             
                         </Button>
                         <Image Source="icon.png" 
@@ -40,23 +53,26 @@
         </TableSection>
         <TableSection Title="Resultado">
             <TextCell x:Name="txtTotalPropina"
-                      Text="Propina"
+                     Text="{Binding propinaViewModel.propinaTotal}"
                       Detail="0.0">
                 
             </TextCell>
             <TextCell x:Name="txtTotal"
-                      Text="Total"
-                      Detail="0.0">
+                      
+                      Detail="0.0"
+                      Text="{Binding  propinaViewModel.Total}">
 
             </TextCell>
             <TextCell x:Name="txtTotalPropinaPersona"
-                      Text="Propina por persona"
-                      Detail="0.0">
+                     Text="{Binding  propinaViewModel.propinaPorPersona}" 
+                      Detail="0.0"
+                      >
 
             </TextCell>
             <TextCell x:Name="txtTotalPersona"
-                      Text="Total por persona"
-                      Detail="0.0">
+                     
+                      Detail="0.0"
+                     Text="{Binding  propinaViewModel.TotalPersonas}"  >
 
             </TextCell>
         </TableSection>
